# BREIT_TANI_PROJECT_FINALE

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/: README_fuente_Data.md
notebooks/: 01_eda_comprehensive.qmd  02_model_evaluation.qmd
notebooks/eda/: EDA_PREPROCESSING.ipynb
references/: data_dictionary.md
reports/: final_report.qmd
src/analysis/: check_data_quality.py  inspect_features.py
src/config/: settings.py
src/data/: clean_patient_features.py  preprocessing.py
src/features/: build_features.py  oms_zscores.py  selection.py
src/models/: evaluate_model.py  interpretability.py  interpretability_advanced.py  temporal_validation.py  train_model.py
src/pipelines/: 01_preprocessing.py  02_eda.py  03_modeling.py  04_temporal_validation.py  05_advanced_interpretability.py  run_eda.py  run_preprocessing.py
tani_scoring/: README.md  pyproject.toml
tani_scoring/conf/base/: catalog.yml  parameters.yml
tani_scoring/data/04_models/: model_metadata.json  selected_features.json
tani_scoring/src/tani_scoring/: __init__.py  pipeline_registry.py  settings.py
tani_scoring/src/tani_scoring/pipelines/data_processing/: nodes.py  pipeline.py
tani_scoring/src/tani_scoring/pipelines/feature_engineering/: nodes.py  pipeline.py
tani_scoring/src/tani_scoring/pipelines/model_export/: nodes.py  pipeline.py
tani_scoring/src/tani_scoring/pipelines/prediction/: nodes.py  pipeline.py
tani_scoring/tests/: conftest.py
tani_scoring/tests/test_nodes/: test_data_processing.py  test_feature_engineering.py  test_prediction.py
(+2 files in other folders)
