[project]
name = "tani_scoring"
version = "0.1.0"
description = "Pipeline de prediccion de deficit en desarrollo infantil para TANI"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "kedro>=0.19.0,<0.20",
    "kedro-datasets[pandas.csvdataset,pandas.exceldataset]>=3.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "imbalanced-learn>=0.11",
    "shap>=0.43",
    "openpyxl>=3.1",
    "joblib>=1.3",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "kedro-viz>=7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.kedro]
package_name = "tani_scoring"
project_name = "TANI Scoring Pipeline"
kedro_init_version = "0.19.0"
tools = ""
example_pipeline = "false"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "918cff2277664667b0db9492bf7c4065"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
